# beel

./: .gitignore  beel_documentacion.tex
backend/: .env.example  pyproject.toml  start.sh
backend/alembic/: alembic.ini  env.py
backend/alembic/versions/: 001_initial_extensions_and_functions.py  002_users_and_auth.py  003_properties.py  004_availability_reservations_payments.py  005_messaging_reviews_notifications_analytics.py  006_seed_amenities.py  007_missing_indexes.py  008_payout_approval_and_refunds.py  009_nextauth_fields.py  010_identity_verification.py  011_reservations_missing_columns.py  012_payments_missing_columns.py  013_s3_key_and_is_archived.py  014_require_guest_identity.py  015_add_bank_details_to_users.py  016_messages_reply_to.py  017_message_reactions.py  018_payments_status_varchar30.py  019_clabe_audit_fields.py  020_favorites.py
backend/app/: main.py
backend/app/core/: analytics.py  auth.py  cache.py  config.py  database.py  email.py  identity.py  limiter.py  sms.py  storage.py
backend/app/modules/favorites/: models.py  router.py  service.py
backend/app/modules/messaging/: models.py  router.py  schemas.py  service.py
backend/app/modules/notifications/: models.py  router.py  schemas.py  service.py
backend/app/modules/payments/: models.py  router.py  schemas.py  service.py
backend/app/modules/properties/: demo_seed.py  models.py  router.py  schemas.py  service.py
backend/app/modules/reservations/: models.py  router.py  schemas.py  service.py
backend/database/: schema.sql
backend/scripts/: seed_demo.py
frontend/: auth.ts  (+8 more)
(+92 files in other folders)
