[tool.poetry]
name = "beel-backend"
version = "0.1.0"
description = "Backend de Beel — plataforma de hospedajes en Yucatán"
authors = ["Beel <dev@beel.mx>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

# Web framework
fastapi = "^0.111.0"
uvicorn = { version = "^0.30.1", extras = ["standard"] }

# Base de datos
sqlalchemy = "^2.0.31"
asyncpg = "^0.29.0"
alembic = "^1.13.2"

# Validación y settings
pydantic = "^2.8.2"
pydantic-settings = "^2.3.4"
email-validator = "^2.2.0"

# Cache
redis = { version = "^5.0.8", extras = ["hiredis"] }

# Auth (Clerk JWT verification)
python-jose = { version = "^3.3.0", extras = ["cryptography"] }
httpx = "^0.27.0"

# AWS S3
boto3 = "^1.34.144"
python-multipart = "^0.0.9"

# MercadoPago
mercadopago = "^2.2.1"

# Mensajería / Notificaciones
sendgrid = "^6.11.0"

# Monitoring
sentry-sdk = { version = "^2.11.0", extras = ["fastapi"] }

# Rate limiting
slowapi = "^0.1.9"

# Utilidades
python-dateutil = "^2.9.0"
pytz = "^2024.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"
pytest-cov = "^5.0.0"
httpx = "^0.27.0"
faker = "^26.0.0"
ruff = "^0.5.5"
mypy = "^1.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
